return attribute DTO instead of string refactor